--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <body>
         <div class="card">
             <img src="images/hipster.jpg" alt="John" style="width:100%">
-            <h1>John Doe</h1>
+            <h1>Pranav Raj</h1>
             <p class="title">Content Creator, Entertainer</p>
             <p>Harvard University</p>
             <a href="https://www.instagram.com/hipsterrgaming/"><i class="fa-brands fa-instagram"></i></a>
