--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="card">
-            <img src="images/hipster.jpg" alt="John" style="width:100%">
+            <img src="images/hipster.jpg" alt="hippu" style="width:100%">
             <h1>Pranav Raj</h1>
             <p class="title">Content Creator, Entertainer</p>
             <p>Harvard University</p>
