--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
             <a href="https://www.instagram.com/hipsterrgaming/"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://discord.gg/hipster"><i class="fa-brands fa-discord"></i></a>
             <a href="https://www.youtube.com/c/HipsterGaming"><i class="fa-brands fa-youtube"></i></a>
-            <a href="https://www.youtube.com/channel/UC362itbTmeqNXnfQ4IPoAKw"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://loco.gg/streamers/OWEBNUGBBY"><img src="images/loco.png" alt="loco" height="20" width="20"></a>
         </div>
     </body>
 </html>
