--- a/home.html
+++ b/home.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <title>Hipster Gaming</title>
+        <link rel="icon" type="image/png" href="/images/logo.png" style="width:100%">
+        <meta name="description" content="Official website of **Hipster Gaming**">
+        <meta name="theme-color" content="#393939">
+        <meta name="image" content="/images/logo.png" />
+        <meta property="twitter:image" content="/images/logo.png" />
+        <meta property="og:image" content="/images/logo.png" />
+        <meta property="og:image:secure_url" content="/images/logo.png" />
+        <meta property="og:image:width" content="1200" />
+        <meta property="og:image:height" content="630" />
+        <meta property="og:image:type" content="image/png" />
+
+        <meta name="viewport" content="width=device-width">
+
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
         <link rel="stylesheet" href="files/styles.css">
     </head>
@@ -15,7 +30,7 @@
             <a href="https://www.instagram.com/hipsterrgaming/"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://discord.gg/hipster"><i class="fa-brands fa-discord"></i></a>
             <a href="https://www.youtube.com/c/HipsterGaming"><i class="fa-brands fa-youtube"></i></a>
-            <a href="https://loco.gg/streamers/OWEBNUGBBY"><img src="images/loco.png" alt="loco" height="20" width="20"></a>
+            <a href="https://loco.gg/streamers/OWEBNUGBBY"><img src="images/loco.png" alt="loco" height="18" width="20"></a>
         </div>
     </body>
 </html>
