--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Hipster Gaming</title>
         <link rel="icon" type="image/png" href="/images/logo.png" style="width:100%">
-        <meta name="description" content="Official website of **Hipster Gaming**">
+        <meta name="description" content="Official website of Hipster Gaming">
         <meta name="theme-color" content="#393939">
         <meta name="image" content="/images/logo.png" />
         <meta property="twitter:image" content="/images/logo.png" />
