--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
       <p class="title">Content Creator, Entertainer</p>
       <p></p>
       <a href="https://www.instagram.com/hipsterrgaming/" id="social_insta"
-        ><i class="fa-brands fa-instagram"></i
+        ><i class="fa-brands fa-instagram mini_spacing"></i
       ></a>
       <a href="https://discord.gg/hipster" id="social_discord"
-        ><i class="fa-brands fa-discord"></i
+        ><i class="fa-brands fa-discord mini_spacing"></i
       ></a>
       <a href="https://www.youtube.com/c/HipsterGaming" id="social_youtube"
-        ><i class="fa-brands fa-youtube"></i
+        ><i class="fa-brands fa-youtube mini_spacing"></i
       ></a>
-      <a href="https://loco.gg/streamers/OWEBNUGBBY" id="social_loco"
+      <a href="https://loco.gg/streamers/OWEBNUGBBY" id="social_loco" class="mini_spacing"
         ><img src="images/loco.png" alt="loco" height="18" width="20"
       /></a>
     </div>
