--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <link rel="stylesheet" href="files/styles.css" />
     <script src="files/liveReload.js"></script>
     <script defer src="files/hoverAnimation.js"></script>
+    <noscript>
+   This page needs JavaScript activated to work properly. Please enable JAVASCRIPT in your browser!
+   <style>div { display:none; }</style>
+ </noscript>
   </head>
   <body>
     <br /><br />
