--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="files/styles.css" />
     <script src="files/liveReload.js"></script>
     <script defer src="files/hoverAnimation.js"></script>
-    <noscript>
+    <noscript style="color:white;">
    This page needs JavaScript activated to work properly. Please enable JAVASCRIPT in your browser!
    <style>div { display:none; }</style>
  </noscript>
