--- a/index.html
+++ b/index.html
@@ -25,17 +25,25 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'> 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="files/styles.css" />
     <script src="files/liveReload.js"></script>
     <script defer src="files/hoverAnimation.js"></script>
-    <noscript style="color:white;">
-   This page needs JavaScript activated to work properly. Please enable JAVASCRIPT in your browser!
-   <style>div { display: none; }</style>
- </noscript>
+    <noscript style="color: white">
+      This page needs JavaScript activated to work properly. Please enable
+      JAVASCRIPT in your browser!
+      <style>
+        div {
+          display: none;
+        }
+      </style>
+    </noscript>
   </head>
   <body>
-    <br /><br />
+    <br />
     <br />
     <div class="card">
       <img src="images/hipster.jpg" alt="hippu" style="width: 100%" />
@@ -49,12 +57,16 @@
         ><i class="fa-brands fa-discord mini_spacing"></i
       ></a>
       <a href="https://www.youtube.com/c/HipsterGaming" id="social_youtube"
-        ><i class='fa fa-youtube-play'></i></a>
-      <a href="https://loco.gg/streamers/OWEBNUGBBY" id="social_loco" class="mini_spacing"
+        ><i class="fa fa-youtube-play"></i
+      ></a>
+      <a
+        href="https://loco.gg/streamers/OWEBNUGBBY"
+        id="social_loco"
+        class="mini_spacing"
         ><img src="images/loco.png" alt="loco" height="18" width="20"
       /></a>
     </div>
-    <br /><br />
+    <br />
     <br />
   </body>
 </html>
