More logos and audio

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     />
     <link rel="stylesheet" href="files/styles.css" />
     <script src="files/liveReload.js"></script>
-    <script defer src="files/hoverAnimation.js"></script>
+    <script defer src="files/hoverImage.js"></script>
     <noscript style="color: white">
       This page needs JavaScript activated to work properly. Please enable
       JAVASCRIPT in your browser!
@@ -45,8 +45,8 @@
   <body>
     <br />
     <br />
-    <div class="card">
-      <img src="images/hipster.jpg" alt="hippu" style="width: 100%" />
+    <div class="card" id = "card">
+      <img id = "main_logo" src="images/hipster.jpg" alt="hippu" style="width: 100%" />
       <h1>Pranav Raj</h1>
       <p class="title">Content Creator, Entertainer</p>
       <p></p>
