screen size bug fix

--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
             </div>
         </div>
         <div class="container">
-          <div class="services w3-hide-large w3-hide-medium" style="padding-top: 40%;">
+          <div class="services w3-hide-large w3-hide-medium" style="padding-top: 90%; width: 200px;">
               <div class="service">
                 <span class="yt" onclick="ytRedirect()"><i class="fa-brands fa-youtube"></i> Hipster Gaming</span>
               </div>
-              <div  class="service">
+              <div class="service">
                 <span class="instagram" onclick="instaRedirect()"><i class="fa-brands fa-instagram"></i> hipsterrgaming</span>
               </div>
               <div class="service">
