--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="text">
           <h2>Hipster Gaming</h2>
           <h5>Content Creator & <span style="color: #4070f4;">Streamer</span></h5>
-            <p class="para">Pranav Raj, better known as Hipster Gaming, is an Indian streamer, <span style="color: red;" onclick="ytRedirect()">YouTuber</span> and professional content creator. Pranav began streaming by playing Garena Free Fire  in late 2019. He has over 800k subscribers in YouTube, which was established in 2019.</p>
+            <p class="para">Pranav Raj, better known as Hipster Gaming, is an Indian streamer, <span style="color: red;" onclick="ytRedirect()">YouTuber</span> and professional content creator. Pranav began streaming by playing Garena Free Fire  in late 2019. He has over 1m subscribers in YouTube, which was established in 2019.</p>
         </div>
       </div>
 
@@ -73,7 +73,7 @@
           <img src="/images/hipster2.jpeg" class="pic" alt="Hipster">
           <h2>Hipster Gaming</h2>
           <h5>Content Creator & <span style="color: #4070f4;">Streamer</span></h5>
-          <p class="para">Pranav Raj, better known as Hipster Gaming, is an Indian streamer, <span style="color: red;" onclick="ytRedirect()">YouTuber</span> and professional content creator. Pranav began streaming by playing Garena Free Fire  in late 2019. He has over 800k subscribers in YouTube, which was established in 2019.</p>
+          <p class="para">Pranav Raj, better known as Hipster Gaming, is an Indian streamer, <span style="color: red;" onclick="ytRedirect()">YouTuber</span> and professional content creator. Pranav began streaming by playing Garena Free Fire  in late 2019. He has over 1m subscribers in YouTube, which was established in 2019.</p>
         </div>
       </div>
     </section>
